--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ after_success:
   - git config user.email "${GH_USER_EMAIL}"
   - git add .
   - git commit -m "Build $(date +%Y%m%d%H%M)"
-  - git push --force --quiet "https://${GH_TOKEN}@${GH_REPO}" master:master
+  - git push --force --quiet "https://${GH_TOKEN}@${GH_REPO}" main:main
